--- a/game/index.html
+++ b/game/index.html
@@ -9,7 +9,7 @@
     />
     <title>devvit-webview-react</title>
   </head>
-  <body class="bg-slate-900">
+  <body class="bg-gray-200">
     <div id="root" class="h-full"></div>
     <script type="module" src="main.tsx"></script>
   </body>
